Fix css in dark mode for checkbox only

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,10 +9,6 @@
  * Consider organizing styles into separate files for maintainability.
 */
 
-input {
-    color: black !important;
-}
-
-textarea {
+input:not([type="checkbox"]), textarea, select {
     color: black !important;
 }
